--- a/account-manager/package.json
+++ b/account-manager/package.json
@@ -8,7 +8,9 @@
 		"build": "tsc -b && vite build",
 		"lint": "eslint .",
 		"preview": "vite preview",
-		"test": "vitest"
+		"test": "vitest",
+		"test:watch": "vitest --watch",
+		"type-check": "tsc --noEmit"
 	},
 	"dependencies": {
 		"@tailwindcss/vite": "^4.0.14",
