--- a/account-manager/package.json
+++ b/account-manager/package.json
@@ -18,6 +18,7 @@
 		"fuse.js": "^7.1.0",
 		"mobx": "^6.13.7",
 		"mobx-react-lite": "^4.1.0",
+		"papaparse": "^5.5.2",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-icons": "^5.5.0",
@@ -30,6 +31,7 @@
 		"@testing-library/react": "^16.2.0",
 		"@testing-library/user-event": "^14.6.1",
 		"@types/node": "^22.13.11",
+		"@types/papaparse": "^5.3.15",
 		"@types/react": "^19.0.10",
 		"@types/react-dom": "^19.0.4",
 		"@vitejs/plugin-react": "^4.3.4",
