--- a/account-manager/package.json
+++ b/account-manager/package.json
@@ -14,6 +14,7 @@
 	},
 	"dependencies": {
 		"@tailwindcss/vite": "^4.0.14",
+		"@testing-library/dom": "^10.4.0",
 		"axios": "^1.8.4",
 		"fuse.js": "^7.1.0",
 		"mobx": "^6.13.7",
